--- a/projects/sign_up.html
+++ b/projects/sign_up.html
@@ -24,7 +24,7 @@
   <h2>Sign up for upcoming launch!</h2>
   <br>
 
-  <form class="signup" action="D:\fullstack_udemy_demo_project\CSS\thanks.html" method="get">
+  <form class="signup" action="thanks.html" method="get">
   <label for="firstname">First Name:</label>
   <br>
   <input id="firstname" type="text" name="firstname" required>
