--- a/projects/sign_up_page.html
+++ b/projects/sign_up_page.html
@@ -16,7 +16,7 @@
   <h1 class="display-4">Log In</h1>
   <p class="lead">Enter your email and password below to log in to Nap Lover</p>
   </div>
-  <form>
+  <form action="thanks.html">
   <div class="form-group">
     <label for="exampleInputEmail1">Email address</label>
     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
