--- a/projects/bootstrap_project.html
+++ b/projects/bootstrap_project.html
@@ -56,14 +56,13 @@
     </nav>
       <div class="jumbotron">
   <h1 class="display-4">Nap Lover Project</h1>
-  <h3>Welcome to your Bootstrap Project: Nap Lover</h3>
-  <h3>You will recreate this webpage and an additional Form Page</h3>
+  <h3>Welcome to my Bootstrap Project: Nap Lover</h3>
+  <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h3>
   <h3>Just follow the instruction steps here to re-create these webpages!</h3>
   <ol>
-    <li>Create a general landing page with a JumboTron</li>
-    <li>Next create a NavBar on the Page that links to another html file</li>
-    <li>Add two paragraphs of lorem-ipsum below the jumbotron</li>
-    <li>Next use the Grid system to add in thumbnail pictures of coffee. Source: https://stocksnap.io/search/coffee You will need to use the thumbnail class for this.<br>  Here are the image links: <ul>
+    <li>this page is created using bootstrap</li>
+    <li>click welcome to learn the difference between cats and dogs</li>
+    <li>two paragraphs of lorem-ipsum</li>
     <li><a href="https://cdn.stocksnap.io/img-thumbs/960w/animals-feline_JPENQWAP48.jpg">One</a></li>
     <li><a href="https://cdn.stocksnap.io/img-thumbs/960w/colorful-graffiti_H7OB449SSJ.jpg">Two</a></li>
     <li><a href="https://cdn.stocksnap.io/img-thumbs/960w/cat-grooming_7BXCZNT5JF.jpg">Three</a></li>
@@ -71,9 +70,8 @@
     <li><a href="https://cdn.stocksnap.io/img-thumbs/960w/sleeping-cat_D828LPF94C.jpg">Five</a></li>
     <li><a href="https://cdn.stocksnap.io/img-thumbs/960w/sleeping-cat_CYUELCXZ74.jpg">Six</a></li>
     </ul></li>
-    <li>Next make sure that at the largest settings you have 3 columns of pictures. On the smallest screen settings you should have 2 columns. Its upto you where you want to change./</li>
-    <li>Next create another htnl file for the sign up page.</li>
-    <li>Create a Form on this Sign Up page with Email, Password, and a Check Box</li>
+    <li>Below are the 3 columns of pictures. On the smallest screen settings you should have 2 columns./</li>
+
   </ol>
 
   <hr class="my-4">
