--- a/projects/sign_up.html
+++ b/projects/sign_up.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="capstone_project_one.css">
+    <link rel="stylesheet" href="sign_up.css">
   </head>
   <body>
 
