--- a/projects/01/bootstrap_project.html
+++ b/projects/01/bootstrap_project.html
@@ -58,7 +58,6 @@
   <h1 class="display-4">Nap Lover Project</h1>
   <h3>Welcome to my Bootstrap Project: Nap Lover</h3>
   <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h3>
-  <h3>Just follow the instruction steps here to re-create these webpages!</h3>
   <ol>
     <li>this page is created using bootstrap</li>
     <li>click welcome to learn the difference between cats and dogs</li>
@@ -70,7 +69,7 @@
     <li><a href="https://cdn.stocksnap.io/img-thumbs/960w/sleeping-cat_D828LPF94C.jpg">Five</a></li>
     <li><a href="https://cdn.stocksnap.io/img-thumbs/960w/sleeping-cat_CYUELCXZ74.jpg">Six</a></li>
     </ul></li>
-    <li>Below are the 3 columns of pictures. On the smallest screen settings you should have 2 columns./</li>
+    <li>Below are the 3 columns of pictures. On the smallest screen settings you should have 2 columns of picture atleast./</li>
 
   </ol>
 
