--- a/projects/bootstarp_minor_project/bootstrap_project.html
+++ b/projects/bootstarp_minor_project/bootstrap_project.html
@@ -60,16 +60,17 @@
   <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h3>
   <ol>
     <li>this page is created using bootstrap</li>
-    <li>click welcome to learn the difference between cats and dogs</li>
+    <li>click <em>Welcome</em> in the navbar to learn the difference between cats and dogs</li>
     <li>two paragraphs of lorem-ipsum</li>
+    <li>Below is the list of links for the images used in this page below:</li>
+    <ul>
     <li><a href="https://cdn.stocksnap.io/img-thumbs/960w/animals-feline_JPENQWAP48.jpg">One</a></li>
     <li><a href="https://cdn.stocksnap.io/img-thumbs/960w/colorful-graffiti_H7OB449SSJ.jpg">Two</a></li>
     <li><a href="https://cdn.stocksnap.io/img-thumbs/960w/cat-grooming_7BXCZNT5JF.jpg">Three</a></li>
     <li><a href="https://cdn.stocksnap.io/img-thumbs/960w/tiger-cat_FCC20A5965.jpg">Four</a></li>
     <li><a href="https://cdn.stocksnap.io/img-thumbs/960w/sleeping-cat_D828LPF94C.jpg">Five</a></li>
     <li><a href="https://cdn.stocksnap.io/img-thumbs/960w/sleeping-cat_CYUELCXZ74.jpg">Six</a></li>
-    </ul></li>
-    <li>Below are the 3 columns of pictures. On the smallest screen settings you should have 2 columns of picture atleast./</li>
+    </ul>
 
   </ol>
 
